[gd_scene load_steps=3 format=2]

[ext_resource path="res://globals/MenuPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/ui_theme/ui_theme.tres" type="Theme" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MenuPopup" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -153.5
offset_right = 154.0
offset_bottom = 154.5

[node name="MarginContainer" type="MarginContainer" parent="MenuPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 200, 200 )
theme_override_constants/margin_right = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPopup/MarginContainer"]
offset_left = 50.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 250.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPopup/MarginContainer/HBoxContainer"]
offset_right = 200.0
offset_bottom = 200.0
custom_minimum_size = Vector2( 200, 200 )
theme_override_constants/separation = 20
alignment = 1

[node name="Music Settings" type="VBoxContainer" parent="MenuPopup/MarginContainer/HBoxContainer/VBoxContainer"]
offset_top = 63.0
offset_right = 200.0
offset_bottom = 97.0

[node name="Label" type="Label" parent="MenuPopup/MarginContainer/HBoxContainer/VBoxContainer/Music Settings"]
offset_right = 200.0
offset_bottom = 14.0
text = "Audio Volume"

[node name="AudioVolumeSlider" type="HSlider" parent="MenuPopup/MarginContainer/HBoxContainer/VBoxContainer/Music Settings"]
offset_top = 18.0
offset_right = 200.0
offset_bottom = 34.0
theme = ExtResource( 2 )
min_value = -70.0
max_value = 10.0
step = 0.5

[node name="CloseButton" type="Button" parent="MenuPopup/MarginContainer/HBoxContainer/VBoxContainer"]
offset_top = 117.0
offset_right = 200.0
offset_bottom = 137.0
theme = ExtResource( 2 )
text = "Close menu"

[connection signal="popup_hide" from="MenuPopup" to="." method="_on_MenuPopup_popup_hide"]
[connection signal="value_changed" from="MenuPopup/MarginContainer/HBoxContainer/VBoxContainer/Music Settings/AudioVolumeSlider" to="." method="_on_AudioVolumeSlider_value_changed"]
[connection signal="pressed" from="MenuPopup/MarginContainer/HBoxContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
